--- a/estilo.css
+++ b/estilo.css
@@ -6,7 +6,7 @@ h1 {
 }
 .caixa1 {
   position:  absolute;
-  background: #930069;
+  background: #0B2161;
   color: #FFFFFF;
   width: 200px;
   height: 200px;
@@ -16,10 +16,29 @@ h1 {
 
 .caixa2 {
   position: absolute;
-  background: #CC33CC;
+  background: #08298A;
   color: #FFFFFF;
   width: 200PX;
   height: 200px;
-  right: 0px;
+  right: 205px;
   bottom: 0;
+}
+
+.caixa3 {
+  position: absolute;
+  background: #0B173B;
+  color: #FFFFFF;
+  width: 200px;
+  height: 200px;
+  right: 0;
+  bottom: 205px;
+}
+
+.menuPrincipal {
+  position: relative;
+  background: #5882FA;
+  width: 100%;
+  height: 120%;
+  top: 0;
+  color:#FFFFFF
 }
