--- a/estilo.css
+++ b/estilo.css
@@ -6,47 +6,71 @@ h1 {
 }
 .caixa1 {
     position: absolute;
-    background: #0B2161;
+    background: #0A122A;
     color: #FFFFFF;
-    width: 200px;
-    height: 200px;
+    width: 40px;
+    height: 40px;
     right: 0;
-    bottom: 0;
+    top: 0;
 }
 
 .caixa2 {
     position: absolute;
-    background: #08298A;
+    background: #0B2161;
     color: #FFFFFF;
-    width: 200px;
-    height: 200px;
-    right: 205px;
-    bottom: 0;
+    width: 40px;
+    height: 40px;
+    right: 44px;
+    top: 0;
 }
 
 .caixa3 {
     position: absolute;
-    background: #0B243B;
+    background: #08298A;
     color: #FFFFFF;
-    width: 200px;
-    height: 200px;
+    width: 40px;
+    height: 40px;
     right: 0;
-    bottom: 205px;
+    top: 44px;
 }
+
+.caixa4 {
+  position: absolute;
+  background: #0B173B;
+  color: #FFFFFF;
+  width: 40px;
+  height: 40px;
+  right: 44px;
+  top: 44px;
+}
+
+.caixa5 {
+  position: absolute;
+  background: black;
+  color: #FFFFFF;
+  width: 40px;
+  height: 40px;
+  right: 22px;
+  top: 22px;
+}
+
 .menuPrincipal {
-   position: relative;
+   position: absolute;
    background: #2E64FE;
    width: 100%;
    height: 45px;
    top: 0;
    left: 0;
    color: #FFFFFF;
+   display: flex;
+   justify-content: start;
+   text-transform: uppercase;
 }
 nav ul{
   list-style-type: none;
-  margin: 0%;
-  padding: 0%;
-  overflow: 0%;
+  margin: 0;
+  padding: 0;
+  overflow: 0;
 }
 li{
   float: left;
@@ -57,7 +81,7 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-family: Georgia, 'Times New Roman', Times, serif;
+  font-family: 'Courier New', Courier, monospace;
 }
 li a:hover {
   background: rgb(157, 74, 212);
@@ -65,6 +89,9 @@ li a:hover {
 }
 #aviao {
   width: 20%;
+}
+#aviao:hover{
+  width: 22%;
 }
 .caixaAviao {
   position: absolute;
@@ -78,4 +105,23 @@ li a:hover {
   border-width: 20px;
   border-style: solid;
   padding: 20px;
+  display: flex;
+  justify-content: center;
+}
+.rodape {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background: black;
+  color: blanchedalmond;
+  display: flex;
+  justify-content: center;
+  font-family: 20px;
+  left: 0;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.conteudo {
+  position: absolute;
+  top: 45px;
 }
