--- a/estilo.css
+++ b/estilo.css
@@ -109,19 +109,34 @@ li a:hover {
   justify-content: center;
 }
 .rodape {
-  position: absolute;
-  bottom: 0;
+  position: relative;
   width: 100%;
-  height: 50px;
-  background: black;
-  color: blanchedalmond;
   display: flex;
   justify-content: center;
-  font-family: 20px;
-  left: 0;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+#copy {
+  position: relative;
+  bottom: 0;
+  border-radius: 30px;
+  background: black;
+  color: burlywood;
+  width: 80%;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  font-family: 18px;
 }
 .conteudo {
   position: absolute;
   top: 45px;
+  width: 95%;
+  padding: 5px;
+}
+.genteGrande {
+  position: absolute;
+  width: 120px;
+  height: 100px;
+  top: 0;
+  right: 0;
+  z-index: 999;
 }
