--- a/estilo.css
+++ b/estilo.css
@@ -1,70 +1,26 @@
 body {
-  background: #fafafa;
+  margin: 0;
+  padding: 0;
 }
 h1 {
   text-align: center;
 }
 .caixa1 {
-    position: absolute;
+    position: relative;
     background: #0A122A;
+    width: 200px;
+    height: 2o0px;
     color: #FFFFFF;
-    width: 40px;
-    height: 40px;
-    right: 0;
-    top: 0;
+    left: 50%;
 }
-
-.caixa2 {
-    position: absolute;
-    background: #0B2161;
-    color: #FFFFFF;
-    width: 40px;
-    height: 40px;
-    right: 44px;
-    top: 0;
-}
-
-.caixa3 {
-    position: absolute;
-    background: #08298A;
-    color: #FFFFFF;
-    width: 40px;
-    height: 40px;
-    right: 0;
-    top: 44px;
-}
-
-.caixa4 {
-  position: absolute;
-  background: #0B173B;
-  color: #FFFFFF;
-  width: 40px;
-  height: 40px;
-  right: 44px;
-  top: 44px;
-}
-
-.caixa5 {
-  position: absolute;
-  background: black;
-  color: #FFFFFF;
-  width: 40px;
-  height: 40px;
-  right: 22px;
-  top: 22px;
-}
-
 .menuPrincipal {
-   position: absolute;
+   position: fixed;
    background: #2E64FE;
    width: 100%;
    height: 45px;
-   top: 0;
+   top: 0pt;
    left: 0;
-   color: #FFFFFF;
-   display: flex;
-   justify-content: start;
-   text-transform: uppercase;
+   z-index: 900;
 }
 nav ul{
   list-style-type: none;
@@ -81,62 +37,75 @@ li a {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Times New Roman', Times, serif;
+  text-transform: uppercase;
 }
 li a:hover {
   background: rgb(157, 74, 212);
   color: #FFFFFF;
 }
-#aviao {
-  width: 20%;
-}
-#aviao:hover{
-  width: 22%;
-}
-.caixaAviao {
+.imgEstudo {
   position: absolute;
-  top: 50px;
-  left: 0;
   width: 90%;
-  height: 150px;
-  background:rgb(242, 242, 239);
+  height: 120px;
+  background: #ade0e2;
+  top: 45px;
+  left: 0;
   margin: 20px;
-  border-color: #013ADF;
+  border-color: rgb(235, 240, 235);
   border-width: 20px;
   border-style: solid;
   padding: 20px;
   display: flex;
   justify-content: center;
 }
-.rodape {
+#genteGrande {
+  width: 20%;
+}
+#rodape {
+  position: relative;
+  bottom: 0;
+  border-radius: 25px;
+  width: 50%;
+  height: 30px;
+  background: #FAA825;
+  color:#030303;
+  display: flex;
+  justify-content: center;
+  font-size: 26px;
+  font-family: 'Times New Roman', Times, serif;
+}
+.capaRodape {
   position: relative;
   width: 100%;
   display: flex;
-  justify-content: center;
-}
-#copy {
-  position: relative;
-  bottom: 0;
-  border-radius: 30px;
-  background: black;
-  color: burlywood;
-  width: 80%;
-  height: 40px;
-  display: flex;
-  justify-content: center;
-  font-family: 18px;
+   justify-content: center;
 }
 .conteudo {
   position: absolute;
   top: 45px;
   width: 95%;
-  padding: 5px;
+  padding: 20px;
 }
-.genteGrande {
-  position: absolute;
-  width: 120px;
-  height: 100px;
-  top: 0;
-  right: 0;
-  z-index: 999;
+.logoGenteGrande {
+   position: fixed;
+   top: 0;
+   right: 0;
+   z-index: 999;
+   width: 120px;
+   height: 100px;
+}
+.conteudoAnual{
+   width: 100%;
+}
+.formacao {
+   position: relative;
+   width: 100%;
+   display: flex;
+   justify-content: center;
+}
+.video {
+  position: relative;
+  display: flex;
+  justify-content: center;
 }
